--- a/paper/dotaligner.bib
+++ b/paper/dotaligner.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Martin Smith at 2017-04-10 18:26:08 +1000 
+%% Created for Martin Smith at 2017-05-06 11:59:29 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{muckstein2002stochastic,
+	Author = {M{\"u}ckstein, Ulrike and Hofacker, Ivo L and Stadler, Peter F},
+	Date-Added = {2017-05-06 01:58:56 +0000},
+	Date-Modified = {2017-05-06 01:58:56 +0000},
+	Journal = {Bioinformatics},
+	Number = {suppl 2},
+	Pages = {S153--S160},
+	Publisher = {Oxford Univ Press},
+	Title = {Stochastic pairwise alignments},
+	Volume = {18},
+	Year = {2002}}
 
 @article{johnsson2014evolutionary,
 	Author = {Johnsson, Per and Lipovich, Leonard and Grand{\'e}r, Dan and Morris, Kevin V},
